objects/AwardContacts__c.object
<CustomObject>
    <description>Junction Object for Award and Contacts</description>
    <fields>
        <fullName>Award_Role__c</fullName>
        <label>Award Role</label>
        <picklist>
            <picklistValues>
                <fullName>POC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact2Award__c</fullName>
        <label>Related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Related Contacts</relationshipLabel>
        <relationshipName>AwardContacts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Related_Award__c</fullName>
        <label>Related Award</label>
        <referenceTo>Awards__c</referenceTo>
        <relationshipLabel>Related Contacts</relationshipLabel>
        <relationshipName>RelatedContacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Award Contact</label>
    <nameField>
        <displayFormat>AC-{00000000}</displayFormat>
        <label>Award Contacts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Award Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>